--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -37,6 +37,7 @@ a {
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
+  background-color: purple;
 }
 
 .page__content {
@@ -44,11 +45,6 @@ a {
   align-items: center;
   justify-content: space-between;
   flex-direction: row;
-  max-width: 60%;
-}
-
-.page__body-title {
-  font-size: 24px;
 }
 
 .button__container {
