--- a/src/ui/TextArea/TextArea.style.css
+++ b/src/ui/TextArea/TextArea.style.css
@@ -1,7 +1,6 @@
 .text-area {
   display: flex;
   flex-direction: column;
-  padding: 4px;
   font-family: "Inter", sans-serif;
   font-size: 16px;
   gap: 8px;
